--- a/scss/general/header.scss
+++ b/scss/general/header.scss
@@ -73,10 +73,10 @@
     }
     li {
       display: inline-block;
-      padding: 0 35px;
+      padding: 0 25px;
       height: 100%;
       :hover{
-        color: blue;
+        color: #5757ff;
         text-decoration: underline;
       }
     }
