--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -1,4 +1,23 @@
 <section id="contacts">
   <div class="tab-arrow contacts-arrow"></div>
-  <div>Контакты</div>
+  <div class="contacts__container">
+    <div class="map"><img src="/images/contacts/map.jpg" alt="map.jpg"></div>
+    <div class="contact-info">
+      <h2>Контактная информация:</h2>
+      <div class="work">
+        <span>Мы работаем:</span>
+        <span>тел.: (04595) 521-29-21 (04595) 521-29-22<br><i>e-mail: sale@leb.ua</i></span>
+      </div>
+      <div class="phones">
+        <span>Телефон:</span>
+        <span>ПН-ПТ: 9:00 - 20:00<br>СБ: 10:00 - 18:00<br>ВС: Выходной</span>
+      </div>
+      <h2>Поддержка клиентов:</h2>
+      <div class="support">
+      <span>тел.: (04595) 521-22-22, (04595) 521-23-23<br>(093) 122-22-22, (04595) 521-24-24</span>
+      <span><i>e-mail: support@leb.ua</i></span>
+      <p>Режим работы: круглосуточно</p>
+      </div>
+    </div>
+  </div>
 </section>
