--- a/templates/general/header.html
+++ b/templates/general/header.html
@@ -15,9 +15,10 @@
       <ul>
         <li><a href="#/promo">Акции</a></li>
         <li><a href="#/tariffs">Тарифы</a></li>
-        <li><a href="#/service">Услуги</a></li>
-        <li><a href="#/contacts">Контакты</a></li>
+        <li><a href="#/area">Покрытие</a></li>
         <li><a href="#/faq">Вопрос/Ответ</a></li>
+        <li><a href="#/contacts">Контакты</a></li>
+        <li><a href="#/about">О компании</a></li>
       </ul>
      <!-- <div class="language"><a href="" class="ua">Укр</a>
         <a href="" class="ru">Рус</a></div>
