--- a/scss/faq.scss
+++ b/scss/faq.scss
@@ -1,3 +1,31 @@
 #faq{
   position: relative;
+  .faq__container{
+    padding-top: 45px;
+    .faq-tabs {
+    font-size: 18px;
+    margin: 0 0 10px 0;
+    padding: 0;
+    background-color: #c3def7;
+    width: 100%;
+    height: 50px;
+    display: table;
+    table-layout: fixed;
+    li {
+      display: table-cell;
+      list-style-type: none;
+      text-align: center;
+    }
+    span {
+      cursor: pointer;
+      line-height: 50px;
+      vertical-align: baseline;
+      padding: 9px 10px 23px 10px;
+    }
+  }
+  }
+}
+.active_faq {
+  background-color: #fff;
+  border-radius: 5px 5px 0 0;
 }
