--- a/scss/general/main-fonts.scss
+++ b/scss/general/main-fonts.scss
@@ -17,6 +17,7 @@
   text-decoration: none;
 }
 
+$textcolor: #505151;
 $mainwidth: 1170px;
 
 body{
@@ -29,25 +30,27 @@ a {
 
 .tab-arrow {
     position: absolute;
-    top: -15px;
-    height: 35px;
+    top: -2px;
+    height: 30px;
     width: 180px;
     background-image: url('/images/tariff-Sprites.png');
-    background-position: 0 -14px;
+    background-position: 0 0px;
   }
 .tariff-arrow{
-    top: -43px;
-    left: 459px;
+    left: 426px;
   }
 .contacts-arrow{
-    left: 735px;
+    left: 858px;
   }
 .promo-arrow{
-    left: 325px;
+    left: 313px;
   }
 .faq-arrow{
-    left: 904px;
+    left: 707px;
   }
-.service-arrow{
-    left: 595px
+.area-arrow{
+    left: 556px;
+  }
+.about-arrow{
+    left: 1004px;
   }
