--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,7 @@
 
 @import "promo.scss";
 @import "tariffs.scss";
-@import "service.scss";
+@import "area.scss";
 @import "contacts.scss";
 @import "faq.scss";
-
+@import "about.scss";
