--- a/scss/tariffs.scss
+++ b/scss/tariffs.scss
@@ -1,148 +1,156 @@
 #tariffs {
-  margin: 30px 0 0;
   position: relative;
-  .tariff-tabs {
-    font-size: 18px;
-    margin: 30px 0 0 0;
-    padding: 0;
-    background-color: #c3def7;
-    width: 100%;
-    height: 50px;
-    display: table;
-    table-layout: fixed;
-    li {
-      display: table-cell;
-      list-style-type: none;
-      text-align: center;
-    }
-    span {
-      cursor: pointer;
-      line-height: 50px;
-      vertical-align: baseline;
-      padding: 9px 10px 23px 10px;
-    }
-  }
-  .tariff {
-   /* height: 430px;*/
-    width: 180px;
-    display: inline-block;
-    margin: 40px 0 50px 20px;
-    .prices {
-      min-height: 365px;
-      border-radius: 5px;
-     /* background-image: url('/images/tariffs/tariff-bg2.png');
-      background-position: 0px 0px;*/
-      background-color: #78b0d4;
-      /*:first-child {
-        color: red;
-        font-size: 22px;
-        font-weight: 600;
-        background: none;
-        padding: 25px 0;*/
-      /*        margin: 25px 0;
-    }*/
-      lable {
-        font-size: 18px;
-        background-color: #c8e1ef;
-        width: 100%;
-        height: 25px;
-        line-height: 25px;
+  .tariff__container {
+    padding-top: 45px;
+    .tariff-tabs {
+      font-size: 18px;
+/*      margin: 45px 0 0 0;*/
+      padding: 0;
+      background-color: #c3def7;
+      width: 100%;
+      height: 50px;
+      display: table;
+      table-layout: fixed;
+      li {
+        display: table-cell;
+        list-style-type: none;
         text-align: center;
-        margin-top: 35px;
-        display: block;
-        span {
-          font-weight: bold;
-          font-size: 24px;
+      }
+      span {
+        cursor: pointer;
+        line-height: 50px;
+        vertical-align: baseline;
+        padding: 9px 10px 23px 10px;
+      }
+    }
+    .tariff,
+    .loyalty-program {
+      /* height: 430px;*/
+      width: 180px;
+      display: inline-block;
+      margin: 40px 0 50px 20px;
+      .prices {
+        min-height: 365px;
+        border-radius: 5px;
+        background-image: url('/images/mainbg6.jpg');
+        background-color: #78b0d4;
+        lable {
+          font-size: 18px;
+          background-color: #c8e1ef;
+          width: 100%;
+          height: 25px;
+          line-height: 25px;
+          text-align: center;
+          margin-top: 38px;
+          display: block;
+          span {
+            font-weight: bold;
+            font-size: 24px;
+          }
+        }
+        lable:nth-child(1) {
+          margin: 0;
+          background: none;
+          font-size: 22px;
+          font-weight: 600;
+          padding-top: 25px;
+          padding-bottom: 15px;
         }
       }
-      lable:nth-child(1){
-        margin: 0;
-        background: none;
-        font-size: 22px;
-        font-weight: 600;
-        padding-top: 25px;
+      .loyalty {
+        min-height: 180px;
       }
-    }
-    .arrow-img {
-      display: block;
-      height: 60px;
-      width: 100%;
-      background-image: url('/images/tariff-Sprites.png');
-      background-position: 0px 0px;
-    }
-    button {
-      width: 100%;
-      height: 30px;
-      color: #ffffff;
-      background-color: #70b3ec;
-      font-weight: 600;
-      border: none;
-      border-radius: 4px;
-    }
-  }
-  .tariff-info__container {
-    /*display: inline-block;*/
-    float: right;
-    height: 430px;
-    width: 350px;
-    lable {
-      display: block;
-      color: #5f5f5f;
-      font-size: 18px;
-    }
-    :nth-child(1) {
-      margin-top: 127px;
-    }
-    :nth-child(2) {
-      margin-top: 38px;
-    }
-    :nth-child(3) {
-      margin-top: 30px;
-    }
-    :nth-child(4) {
-      margin-top: 28px;
-    }
-    :nth-child(5) {
-      margin-top: 40px;
-    }
-  }
-  .body-info__container {
-    float: left;
-    color: #5f5f5f;
-    margin: 0 0 0 5px;
-  }
-  .services__main-container {
-    margin-top: 42px;
-    .services__container {
-      float: left;
-      width: $mainwidth / 2 - 10px;
-      lable {
-        margin: 20px 0;
+      .arrow-img {
         display: block;
-        height: 25px;
-        line-height: 25px;
-        background-color: #e1effb;
+        height: 30px;
+        width: 180px;
+        margin: 15px 0;
+        background-image: url('/images/tariff-Sprites.png');
+        background-position: 0px 0px;
       }
-    }
-    .service_name {
-      display: inline-block;
-      width: 453px;
-      border-radius: 5px;
-      background-color: #c3def7;
-      margin: 0 10px 0 20px;
-      lable {
-        text-align: left;
-        padding-left: 10px;
-      }
-    }
-    .service_cost {
-      display: inline-block;
-      width: 87px;
-      border-radius: 5px;
-      background-color: #78b0d4;
-      lable {
+      .button {
+        display: block;
         text-align: center;
-        font-weight: bold;
+        line-height: 28px;
+        width: 100%;
+        height: 30px;
+        color: #ffffff;
+        background-color: #70b3ec;
+        font-weight: 600;
+        border: none;
+        border-radius: 4px;
+        text-decoration: none;
+        :hover{
+          text-decoration: none;
+        }
+      }
+    }
+    .tariff-info__container {
+      float: right;
+      height: 430px;
+      width: 350px;
+      span {
+        display: block;
+        color: #5f5f5f;
+        font-size: 18px;
+      }
+      :nth-child(1) {
+        margin-top: 119px;
+      }
+      :nth-child(2) {
+        margin-top: 38px;
+      }
+      :nth-child(3) {
+        margin-top: 30px;
+      }
+      :nth-child(4) {
+        margin-top: 20px;
+      }
+      :nth-child(5) {
+        margin-top: 39px;
+      }
+    }
+    .loyalty {
+      height: auto;
+    }
+    .body-info__container {
+      float: left;
+      color: #5f5f5f;
+      margin: 0 0 0 5px;
+    }
+    .services__main-container {
+      margin-top: 42px;
+      .services__container {
+        float: left;
+        width: $mainwidth / 2 - 10px;
+        span {
+          margin: 20px 0;
+          display: block;
+          height: 25px;
+          line-height: 25px;
+          background-color: #e1effb;
+        }
+      }
+      .service_name {
+        display: inline-block;
+        width: 453px;
+        border-radius: 5px;
+        background-color: #c3def7;
+        margin: 0 10px 0 20px;
+        span {
+          text-align: left;
+          padding-left: 10px;
+        }
+      }
+      .service_cost {
+        display: inline-block;
+        width: 87px;
+        border-radius: 5px;
+        background-color: #78b0d4;
+        span {
+          text-align: center;
+          font-weight: bold;
+        }
       }
     }
   }
