--- a/templates/general/footer.html
+++ b/templates/general/footer.html
@@ -1,26 +1,27 @@
 <div id="footer">
   <div class="footer__content">
-  <div class="logo">
-    <a href="#/">leb</a>
-  </div>
-  <div class="telefons">
-    <div class="sels">
-      <lable>Отдел продаж:</lable>
-      <lable>(044) 585-11-11</lable>
-      <lable>(093) 585-11-11</lable>
+    <div class="logo">
+      <a href="#/">leb</a>
     </div>
-    <div class="help">
-      <lable>Техподдержка:</lable>
-      <lable>(044) 585-11-10</lable>
-      <lable>(093) 585-11-10</lable>
+    <div class="telefons">
+      <div class="sels">
+        <span>Отдел продаж:</span>
+        <span>(044) 585-11-11</span>
+        <span>(093) 585-11-11</span>
+      </div>
+      <div class="help">
+        <span>Техподдержка:</span>
+        <span>(044) 585-11-10</span>
+        <span>(093) 585-11-10</span>
+      </div>
+    </div>
+    <div class="right-side">
+      <div class="call-img"></div>
+      <span>(04593) 521-29-21</span>
     </div>
   </div>
-  <div class="right-side">
-  <div class="call-img"></div>
-      <lable>(04593) 521-29-21</lable>
-  </div></div>
   <hr>
   <div class="company-adress">
-  Главный офис – г. Борисполь, ул. Киевский шлях 9 в
+    Главный офис – г. Борисполь, ул. Киевский шлях 9 в
   </div>
 </div>
