--- a/templates/tariffs/tariffs.html
+++ b/templates/tariffs/tariffs.html
@@ -1,40 +1,44 @@
 <section id="tariffs" class="page" ng-controller="tariffsCtrl as tc">
   <div class="tab-arrow tariff-arrow"></div>
-  <ul class="tariff-tabs">
-    <li><span ng-class="{active_tariff: tc.isSelected(0)}" ng-click="tc.selectTab(0)">Для дома</span></li>
-    <li><span ng-class="{active_tariff: tc.isSelected(1)}" ng-click="tc.selectTab(1)">Частный сектор</span></li>
-    <li><span ng-class="{active_tariff: tc.isSelected(2)}" ng-click="tc.selectTab(2)">Для бизнеса</span></li>
-    <li><span ng-class="{active_tariff: tc.isSelected(3)}" ng-click="tc.selectTab(3)">Дополнительные услуги</span></li>
-    <li><span ng-class="{active_tariff: tc.isSelected(4)}" ng-click="tc.selectTab(4)">Программа лояльности</span></li>
-  </ul>
-  <tariffs></tariffs>
-  <div ng-show="tc.isSelected(0)">
-    <div class="body-info__container">
-      <h2>{{tariffsDescr[tc.tab].Home.P1}}</h2>
-      <p>{{tariffsDescr[tc.tab].Home.P2}}</p>
-      <p>{{tariffsDescr[tc.tab].Home.P3}}</p>
+  <div class="tariff__container">
+    <ul class="tariff-tabs">
+      <li><span ng-class="{active_tariff: tc.isSelected(0)}" ng-click="tc.selectTab(0)">Для дома</span></li>
+      <li><span ng-class="{active_tariff: tc.isSelected(1)}" ng-click="tc.selectTab(1)">Частный сектор</span></li>
+      <li><span ng-class="{active_tariff: tc.isSelected(2)}" ng-click="tc.selectTab(2)">Для бизнеса</span></li>
+      <li><span ng-class="{active_tariff: tc.isSelected(3)}" ng-click="tc.selectTab(3)">Дополнительные услуги</span></li>
+      <li><span ng-class="{active_tariff: tc.isSelected(4)}" ng-click="tc.selectTab(4)">Программа лояльности</span></li>
+    </ul>
+    <tariffs></tariffs>
+    <div ng-show="tc.isSelected(0)">
+      <div class="body-info__container">
+        <h2>{{tariffsDescr[tc.tab].Home.P1}}</h2>
+        <p>{{tariffsDescr[tc.tab].Home.P2}}</p>
+        <p>{{tariffsDescr[tc.tab].Home.P3}}</p>
+      </div>
     </div>
-  </div>
-  <div ng-show="tc.isSelected(1)">
-    <div class="body-info__container">
-      <h2>{{tariffsDescr[tc.tab].Country.P1}}</h2>
-      <p>{{tariffsDescr[tc.tab].Country.P2}}</p>
-      <p>{{tariffsDescr[tc.tab].Country.P3}}</p>
-      <p>{{tariffsDescr[tc.tab].Country.P4}}</p>
-      <p>{{tariffsDescr[tc.tab].Country.P5}}</p>
-      <p>{{tariffsDescr[tc.tab].Country.P6}}</p>
+    <div ng-show="tc.isSelected(1)">
+      <div class="body-info__container">
+        <h2>{{tariffsDescr[tc.tab].Country.P1}}</h2>
+        <p>{{tariffsDescr[tc.tab].Country.P2}}</p>
+        <p>{{tariffsDescr[tc.tab].Country.P3}}</p>
+        <p>{{tariffsDescr[tc.tab].Country.P4}}</p>
+        <p>{{tariffsDescr[tc.tab].Country.P5}}</p>
+        <p>{{tariffsDescr[tc.tab].Country.P6}}</p>
+      </div>
     </div>
-  </div>
-  <div ng-show="tc.isSelected(2)">
-    <div class="body-info__container">
-      <h2>{{tariffsDescr[tc.tab].Bussines.P1}}</h2>
-      <p>{{tariffsDescr[tc.tab].Bussines.P2}}</p>
-      <p>{{tariffsDescr[tc.tab].Bussines.P3}}</p>
+    <div ng-show="tc.isSelected(2)">
+      <div class="body-info__container">
+        <h2>{{tariffsDescr[tc.tab].Bussines.P1}}</h2>
+        <p>{{tariffsDescr[tc.tab].Bussines.P2}}</p>
+        <p>{{tariffsDescr[tc.tab].Bussines.P3}}</p>
+      </div>
     </div>
-  </div>
-  <div ng-show="tc.isSelected(4)">
-    <div class="body-info__container">
-      <h2>{{tariffsDescr[tc.tab].LoialProgram.P1}}</h2>
+    <div ng-show="tc.isSelected(4)">
+      <div class="body-info__container">
+        <p>{{tariffsDescr[tc.tab].LoialProgram.P1}}</p>
+        <p>{{tariffsDescr[tc.tab].LoialProgram.P2}}</p>
+        <p>{{tariffsDescr[tc.tab].LoialProgram.P3}}</p>
+      </div>
     </div>
   </div>
 </section>
